--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -5,13 +5,14 @@ html {
   }
   
   *, *:before, *:after {
-    box-sizing: inherit;
+    box-sizing: border-box;
   }
   
   body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
     padding: 0;
     font-weight: normal;
+    overflow-x: hidden;
   }
   
   ol, ul {
